[project]
name = "digital-transformation-timeline"
version = "0.1.0"
description = "Timeline visualization lab for milestones in digital transformation from an editable CSV."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Alberto Mateus P. da Gama" }]

[tool.pytest.ini_options]
pythonpath = ["."]
